[package]
name = "bevy_geo_tiles"
version = "0.2.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Bevy plugin for displaying slippy-map tiles like OpenStreetMap raster tiles."
repository = "https://github.com/Moritz-Schmidt/bevy_geo_tiles"
keywords = ["bevy", "gis", "geography", "osm", "openstreetmap"]
categories = ["science::geo"]
authors = ["Moritz Schmidt <rust@moritz-a-schmidt.de>"]
readme = "README.md"


[features]
default = ["bevy_pancam"]
bevy_pancam = ["dep:bevy_pancam"]
shapes = ["dep:lyon", "bevy/bevy_mesh", "bevy/bevy_color"]
debug_draw = ["bevy/bevy_ui"]

[[example]]
name = "map"
path = "examples/map.rs"

[[example]]
name = "marker"
path = "examples/marker.rs"

[[example]]
name = "polylines"
path = "examples/polylines.rs"
required-features = ["shapes"]

[[example]]
name = "many_shapes"
path = "examples/many_shapes.rs"
required-features = ["shapes"]


[dependencies]
bevy = { version = "0.18", features = [
    "bevy_asset",
    "bevy_camera",
    "bevy_render",
    "bevy_sprite",
    "bevy_sprite_render",
    "bevy_picking",
    "bevy_log",
], default-features = false }
miniproj = "0.10"
miniproj-ops = "0.10"
tilemath = "0.3.0"
image = { version = "0.25", default-features = false, features = [
    "png",
    "jpeg",
] }
lyon = { version = "1.0.16", optional = true }
bevy_pancam = { version = "0.20.0", features = [
    "bevy_egui_0_39",
], optional = true }

[dev-dependencies]
bevy = { version = "0.18", default-features = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.13", default-features = false, features = [
    "blocking",
    "rustls",
] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
indexed_db_futures = { version = "0.6.4", features = ["typed-arrays"] }
reqwest = { version = "0.13", default-features = false, features = [] }

[profile.dev]
opt-level = 3